--- a/links.html
+++ b/links.html
@@ -32,8 +32,23 @@
           <ul>
             <li><a href="https://www.aftonbladet.se">Aftonbladet</a></li>
             <li><a href="https://www.hd.se"> Helsingborgs dagblad</a></li>
-          </ul></li>
-      </ul>
+          </ul></li></ul>
+
+          <ul>
+            <li class="mdn">Links to MDN
+              <ul>
+                <li><a href="https://developer.mozilla.org/sv-SE/">MDN First Page
+                <ul>
+                  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                  (HTML) HyperText Markup Language</li></a>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">
+                (CSS) Cascading Style Sheet</li></a>
+              </ul>
+                </a></li>
+              </ul>
+            </li>
+          </ul>
+
     </div>
     <footer>
       <p>Darmin Siljkovic</p>
